// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API get should dispatch request and failure actions on reject 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "id": 2,
      },
      "type": "CUSTOM_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "id": 2,
      },
      "response": [Error: bad request],
      "type": "CUSTOM_FAILURE",
    },
  ],
]
`;

exports[`API get should dispatch request and success actions on resolve 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "id": 2,
      },
      "type": "CUSTOM_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "id": 2,
      },
      "response": Object {
        "results": Array [
          1,
        ],
      },
      "type": "CUSTOM_SUCCESS",
    },
  ],
]
`;
